--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.3",
     "leaflet": "^1.9.3",
+    "leaflet-draw": "^1.0.4",
     "osmtogeojson": "^3.0.0-beta.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.0",
+    "react-leaflet-draw": "^0.20.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
