--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "osmtogeojson": "^3.0.0-beta.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-json-view": "^1.21.3",
     "react-leaflet": "^4.2.0",
     "react-leaflet-draw": "^0.20.4",
     "react-scripts": "5.0.1",
