Introduce swr, spinner and notifications

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-leaflet": "^4.2.0",
     "react-leaflet-draw": "^0.20.4",
     "react-scripts": "5.0.1",
+    "swr": "^2.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
